--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.0"
+    "mysql2": "^3.10.0",
+    "stripe": "^15.10.0",
+    "ws": "^8.17.0"
   }
 }
