--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
-    "stripe": "^15.10.0",
-    "ws": "^8.17.0"
+    "stripe": "^15.10.0"
   }
 }
