--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
-    "stripe": "^15.10.0"
+    "stripe": "^15.10.0",
+    "tipme": "file:"
   }
 }
